--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         const DL_LINK = urlParams.get('DLLink') || ''; // Download link from Wix
 
         // Lambda endpoint - YOU'LL REPLACE THIS WITH YOUR ACTUAL LAMBDA URL
-        const LAMBDA_ENDPOINT = 'YOUR_LAMBDA_URL_HERE';
+        const LAMBDA_ENDPOINT = 'https://2igrpk2dhe.execute-api.us-east-2.amazonaws.com/default/memorial-send-invites';
 
         // JotForm URLs - REPLACE THESE WITH YOUR ACTUAL JOTFORM URLS
         const MAIN_UPLOADER_JOTFORM = 'https://form.jotform.com/252456612698164';
