Update LAMBDA_ENDPOINT to new URL

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         const DL_LINK = urlParams.get('DLLink') || ''; // Download link from Wix
 
         // Lambda endpoint - YOU'LL REPLACE THIS WITH YOUR ACTUAL LAMBDA URL
-        const LAMBDA_ENDPOINT = 'https://2igrpk2dhe.execute-api.us-east-2.amazonaws.com/default/memorial-send-invites';
+        const LAMBDA_ENDPOINT = 'https://ghrjpvcy4irl3okvg2oq6podtq0irrsh.lambda-url.us-east-2.on.aws/';
 
         // JotForm URLs - REPLACE THESE WITH YOUR ACTUAL JOTFORM URLS
         const MAIN_UPLOADER_JOTFORM = 'https://form.jotform.com/252456612698164';
