--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #5a67d8 0%, #764ba2 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -36,13 +36,14 @@
         }
 
         .header h1 {
-            color: #333;
+            color: #2c3e50;
             font-size: 32px;
             margin-bottom: 10px;
+            font-weight: 600;
         }
 
         .header p {
-            color: #666;
+            color: #6c757d;
             font-size: 16px;
             line-height: 1.6;
         }
@@ -55,12 +56,12 @@
             display: block;
             font-size: 18px;
             font-weight: 600;
-            color: #333;
+            color: #2c3e50;
             margin-bottom: 15px;
         }
 
         .required {
-            color: #e74c3c;
+            color: #dc2626;
         }
 
         .radio-group {
@@ -73,20 +74,23 @@
             display: flex;
             align-items: flex-start;
             padding: 20px;
-            border: 2px solid #e0e0e0;
+            border: 2px solid #dee2e6;
             border-radius: 10px;
             cursor: pointer;
             transition: all 0.3s ease;
+            background: white;
         }
 
         .radio-option:hover {
             border-color: #667eea;
             background-color: #f8f9ff;
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.1);
         }
 
         .radio-option.selected {
             border-color: #667eea;
             background-color: #f0f3ff;
+            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.15);
         }
 
         .radio-option input[type="radio"] {
@@ -104,11 +108,11 @@
 
         .radio-option-text {
             font-size: 16px;
-            color: #333;
+            color: #495057;
             line-height: 1.5;
         }
 
-        /* Contributor section */
+        /* Contributor section - matching blue form's notice box style */
         #contributorSection {
             margin-top: 25px;
             padding: 25px;
@@ -118,9 +122,10 @@
         }
 
         #contributorSection h3 {
-            color: #333;
+            color: #2c3e50;
             font-size: 18px;
             margin-bottom: 20px;
+            font-weight: 600;
         }
 
         .contributor-entry {
@@ -139,30 +144,37 @@
 
         .contributor-entry input {
             padding: 12px;
-            border: 2px solid #ddd;
+            border: 2px solid #dee2e6;
             border-radius: 8px;
             font-size: 15px;
-            transition: border-color 0.3s;
+            transition: all 0.2s ease;
         }
 
         .contributor-entry input:focus {
             outline: none;
             border-color: #667eea;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        }
+
+        .contributor-entry input:hover {
+            border-color: #667eea;
         }
 
         .remove-contributor-btn {
-            background: #e74c3c;
+            background: #dc2626;
             color: white;
             border: none;
             padding: 12px 15px;
             border-radius: 8px;
             cursor: pointer;
             font-size: 14px;
-            transition: background 0.3s;
+            font-weight: 600;
+            transition: all 0.3s ease;
         }
 
         .remove-contributor-btn:hover {
-            background: #c0392b;
+            background: #b91c1c;
+            transform: translateY(-1px);
         }
         
         .sms-checkbox-label {
@@ -170,7 +182,7 @@
             align-items: center;
             gap: 5px;
             font-size: 13px;
-            color: #666;
+            color: #6c757d;
             white-space: nowrap;
         }
         
@@ -191,11 +203,13 @@
             font-size: 15px;
             font-weight: 600;
             margin-top: 10px;
-            transition: background 0.3s;
+            transition: all 0.3s ease;
         }
 
         .add-contributor-btn:hover {
-            background: #5568d3;
+            background: #5a5fcf;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
         }
 
         /* Submit button */
@@ -209,8 +223,10 @@
             font-size: 18px;
             font-weight: 600;
             cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: all 0.3s ease;
             margin-top: 30px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .submit-btn:hover {
@@ -223,9 +239,10 @@
         }
 
         .submit-btn:disabled {
-            background: #ccc;
+            background: #9ca3af;
             cursor: not-allowed;
             transform: none;
+            opacity: 0.5;
         }
 
         /* Loading state */
@@ -235,7 +252,7 @@
         }
 
         .spinner {
-            border: 4px solid #f3f3f3;
+            border: 4px solid #f3f4f6;
             border-top: 4px solid #667eea;
             border-radius: 50%;
             width: 50px;
@@ -249,33 +266,62 @@
             100% { transform: rotate(360deg); }
         }
 
-        /* Success message */
+        /* Success message - matching blue form's green success */
         .success-message {
             text-align: center;
             padding: 40px;
         }
 
         .success-message h2 {
-            color: #28a745;
+            color: #10b981;
             font-size: 28px;
             margin-bottom: 15px;
+            font-weight: 600;
         }
 
         .success-message p {
-            color: #666;
+            color: #6c757d;
             font-size: 16px;
             line-height: 1.6;
         }
 
-        /* Error message */
+        /* Error message - matching blue form's red error style */
         .error-message {
-            background: #fee;
-            border: 2px solid #e74c3c;
+            background: #fee2e2;
+            border: 2px solid #fecaca;
             border-radius: 8px;
             padding: 15px;
             margin-bottom: 20px;
-            color: #c0392b;
+            color: #991b1b;
+            font-weight: 600;
             display: none;
+        }
+
+        /* Input fields styling to match blue form */
+        input[type="text"],
+        input[type="email"],
+        input[type="tel"] {
+            padding: 12px;
+            border: 2px solid #dee2e6;
+            border-radius: 8px;
+            font-size: 15px;
+            width: 100%;
+            box-sizing: border-box;
+            transition: all 0.2s ease;
+        }
+
+        input[type="text"]:focus,
+        input[type="email"]:focus,
+        input[type="tel"]:focus {
+            outline: none;
+            border-color: #667eea;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        }
+
+        input[type="text"]:hover,
+        input[type="email"]:hover,
+        input[type="tel"]:hover {
+            border-color: #667eea;
         }
 
         .hidden {
@@ -332,24 +378,20 @@
                            id="deceasedFirstName" 
                            name="deceasedFirstName" 
                            placeholder="First Name" 
-                           required
-                           style="padding: 12px; border: 2px solid #ddd; border-radius: 8px; font-size: 15px; width: 100%; box-sizing: border-box;">
+                           required>
                     <input type="text" 
                            id="deceasedMiddleName" 
                            name="deceasedMiddleName" 
-                           placeholder="Middle"
-                           style="padding: 12px; border: 2px solid #ddd; border-radius: 8px; font-size: 15px; width: 100%; box-sizing: border-box;">
+                           placeholder="Middle">
                     <input type="text" 
                            id="deceasedLastName" 
                            name="deceasedLastName" 
                            placeholder="Last Name" 
-                           required
-                           style="padding: 12px; border: 2px solid #ddd; border-radius: 8px; font-size: 15px; width: 100%; box-sizing: border-box;">
+                           required>
                     <input type="text" 
                            id="deceasedSuffix" 
                            name="deceasedSuffix" 
-                           placeholder="Jr, Sr"
-                           style="padding: 12px; border: 2px solid #ddd; border-radius: 8px; font-size: 15px; width: 100%; box-sizing: border-box;">
+                           placeholder="Jr, Sr">
                 </div>
             </div>
 
@@ -382,7 +424,7 @@
             <!-- Contributor Contact Info (conditional) -->
             <div id="contributorSection" class="hidden">
                 <h3>👥 Memory Contributors</h3>
-                <p style="color: #666; margin-bottom: 20px; font-size: 14px;">
+                <p style="color: #6c757d; margin-bottom: 20px; font-size: 14px;">
                     Add the names and email addresses of people you'd like to invite to upload photos.
                 </p>
                 <div id="contributorList">
@@ -425,7 +467,7 @@
         <!-- Loading state (hidden by default) -->
         <div id="loadingState" class="loading hidden">
             <div class="spinner"></div>
-            <p>Processing your request...</p>
+            <p style="color: #6c757d;">Processing your request...</p>
         </div>
 
         <!-- Success state (hidden by default) -->
