--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: linear-gradient(135deg, #5a67d8 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -82,15 +82,15 @@
         }
 
         .radio-option:hover {
-            border-color: #667eea;
-            background-color: #f8f9ff;
-            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.1);
+            border-color: #3b82f6;
+            background-color: #eff6ff;
+            box-shadow: 0 2px 8px rgba(59, 130, 246, 0.1);
         }
 
         .radio-option.selected {
-            border-color: #667eea;
-            background-color: #f0f3ff;
-            box-shadow: 0 2px 8px rgba(102, 126, 234, 0.15);
+            border-color: #3b82f6;
+            background-color: #dbeafe;
+            box-shadow: 0 2px 8px rgba(59, 130, 246, 0.15);
         }
 
         .radio-option input[type="radio"] {
@@ -99,7 +99,7 @@
             cursor: pointer;
             width: 20px;
             height: 20px;
-            accent-color: #667eea;
+            accent-color: #3b82f6;
         }
 
         .radio-option-content {
@@ -118,7 +118,7 @@
             padding: 25px;
             background: #f8f9fa;
             border-radius: 10px;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #3b82f6;
         }
 
         #contributorSection h3 {
@@ -152,12 +152,12 @@
 
         .contributor-entry input:focus {
             outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #3b82f6;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
         }
 
         .contributor-entry input:hover {
-            border-color: #667eea;
+            border-color: #3b82f6;
         }
 
         .remove-contributor-btn {
@@ -190,11 +190,11 @@
             width: 18px;
             height: 18px;
             cursor: pointer;
-            accent-color: #667eea;
+            accent-color: #3b82f6;
         }
 
         .add-contributor-btn {
-            background: #667eea;
+            background: #3b82f6;
             color: white;
             border: none;
             padding: 12px 20px;
@@ -207,15 +207,15 @@
         }
 
         .add-contributor-btn:hover {
-            background: #5a5fcf;
+            background: #2563eb;
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 5px 15px rgba(59, 130, 246, 0.3);
         }
 
         /* Submit button */
         .submit-btn {
             width: 100%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
             color: white;
             border: none;
             padding: 18px;
@@ -231,7 +231,7 @@
 
         .submit-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 10px 25px rgba(59, 130, 246, 0.4);
         }
 
         .submit-btn:active {
@@ -253,7 +253,7 @@
 
         .spinner {
             border: 4px solid #f3f4f6;
-            border-top: 4px solid #667eea;
+            border-top: 4px solid #3b82f6;
             border-radius: 50%;
             width: 50px;
             height: 50px;
@@ -314,14 +314,14 @@
         input[type="email"]:focus,
         input[type="tel"]:focus {
             outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #3b82f6;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
         }
 
         input[type="text"]:hover,
         input[type="email"]:hover,
         input[type="tel"]:hover {
-            border-color: #667eea;
+            border-color: #3b82f6;
         }
 
         .hidden {
