Align radio options and adjust styles

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         .radio-option {
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             padding: 20px;
             border: 2px solid #dee2e6;
             border-radius: 10px;
@@ -95,11 +95,11 @@
 
         .radio-option input[type="radio"] {
             margin-right: 15px;
-            margin-top: 3px;
             cursor: pointer;
             width: 20px;
             height: 20px;
             accent-color: #3b82f6;
+            flex-shrink: 0;
         }
 
         .radio-option-content {
