--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
         .radio-option {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
+            gap: 12px;
             padding: 20px;
             border: 2px solid #dee2e6;
             border-radius: 10px;
@@ -94,12 +95,12 @@
         }
 
         .radio-option input[type="radio"] {
-            margin-right: 15px;
-            cursor: pointer;
             width: 20px;
             height: 20px;
-            accent-color: #3b82f6;
+            cursor: pointer;
+            margin-top: 1px;
             flex-shrink: 0;
+            accent-color: #3b82f6;
         }
 
         .radio-option-content {
