--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             font-size: 16px;
             color: #495057;
             line-height: 1.5;
+            display: inline;
         }
 
         /* Contributor section - matching blue form's notice box style */
@@ -405,19 +406,15 @@
                 <div class="radio-group">
                     <label class="radio-option" data-value="yes-invite">
                         <input type="radio" name="inviteOthers" value="yes" required>
-                        <div class="radio-option-content">
-                            <div class="radio-option-text">
-                                Yes, please send upload links to the memory contributors designated below
-                            </div>
-                        </div>
+                        <span class="radio-option-content">
+                            <span class="radio-option-text">Yes, please send upload links to the memory contributors designated below</span>
+                        </span>
                     </label>
                     <label class="radio-option" data-value="no-invite">
                         <input type="radio" name="inviteOthers" value="no">
-                        <div class="radio-option-content">
-                            <div class="radio-option-text">
-                                No, I will consolidate memories and upload photos for this memorial myself
-                            </div>
-                        </div>
+                        <span class="radio-option-content">
+                            <span class="radio-option-text">No, I will consolidate memories and upload photos for this memorial myself</span>
+                        </span>
                     </label>
                 </div>
             </div>
@@ -445,19 +442,15 @@
                 <div class="radio-group">
                     <label class="radio-option" data-value="yes-ready">
                         <input type="radio" name="readyToUpload" value="yes" required>
-                        <div class="radio-option-content">
-                            <div class="radio-option-text">
-                                Yes, I'm ready to upload my photos
-                            </div>
-                        </div>
+                        <span class="radio-option-content">
+                            <span class="radio-option-text">Yes, I'm ready to upload my photos</span>
+                        </span>
                     </label>
                     <label class="radio-option" data-value="no-ready">
                         <input type="radio" name="readyToUpload" value="no">
-                        <div class="radio-option-content">
-                            <div class="radio-option-text">
-                                No, please send me a photo upload link that I can use when I have my photos ready
-                            </div>
-                        </div>
+                        <span class="radio-option-content">
+                            <span class="radio-option-text">No, please send me a photo upload link that I can use when I have my photos ready</span>
+                        </span>
                     </label>
                 </div>
             </div>
