Update introductory text for photo upload setup

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     <div class="container">
         <div class="header">
             <h1>📸 Photo Upload Setup</h1>
-            <p>Let's get your photos organized! Answer a couple quick questions to get started.</p>
+            <p>Let's get your photos together and age sorted! Answer a couple quick questions to get started.</p>
         </div>
 
         <div id="errorMessage" class="error-message"></div>
