--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         }
 
         .container {
-            background: white;
+            background: #e8e8e8;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
             max-width: 700px;
             width: 100%;
             padding: 50px;
+            border: 20px solid #1e3c72;
         }
 
         .header {
@@ -50,6 +51,10 @@
 
         .form-group {
             margin-bottom: 35px;
+            background: white;
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
         }
 
         .form-group label {
