--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memorial Video - Photo Upload Setup</title>
+    <link rel="icon" type="image/svg+xml" 
+      href="https://www.dropbox.com/scl/fi/7tqrvmnchu17tkatqa9l5/MemorialVideoAI-Favicon.svg?rlkey=5cj4gwyhq3frrupo1g1d3y8so&st=znzwkpy9&raw=1">
     <style>
         * {
             margin: 0;
