--- a/index.html
+++ b/index.html
@@ -378,6 +378,13 @@
 </head>
 <body>
     <div class="container">
+        <!-- Logo Section -->
+        <div style="text-align: center; margin: -50px -50px 30px -50px; padding: 30px; background: white; border-radius: 20px 20px 0 0;">
+            <img src="https://www.dropbox.com/scl/fi/i5ye9vg5wzfvxwyrwczq6/Untitled-940-x-600-px-1400-x-600-px.png?rlkey=rk5t9ot5gchvjcqx71lwiln1o&st=6szyks34&raw=1" 
+                 alt="MemorialVideo.AI Logo" 
+                 style="max-width: 400px; width: 100%; height: auto; display: block; margin: 0 auto;">
+        </div>
+        
         <div class="header">
             <h1>📸 Photo Upload Setup</h1>
             <p>Let's get your photos together and age sorted! Answer a couple quick questions to get started.</p>
