--- a/index.html
+++ b/index.html
@@ -464,12 +464,13 @@
                     </label>
                     <textarea id="personalMessage" 
                               name="personalMessage" 
-                              rows="4" 
-                              placeholder="Add a personal message that will be included in the invitation emails..."
+                              rows="5" 
+                              placeholder="We would love to add your favorite 10 photos of [Loved One Name]..."
                               style="width: 100%; padding: 12px; border: 2px solid #dee2e6; border-radius: 8px; font-size: 15px; font-family: inherit; resize: vertical; transition: all 0.2s ease;"></textarea>
-                    <small style="color: #6c757d; font-size: 13px;">This message will appear in the invitation emails sent to contributors.</small>
+                    <small style="color: #6c757d; font-size: 13px; line-height: 1.5;">
+                        <strong>💡 Tip:</strong> It is recommended that you request memories from a special part of the life you are honoring (if helpful) AND provide a memory count guideline to help you remain within 250 images overall. For example: "We would love to add your favorite 10 photos of {Loved One Name}"
+                    </small>
                 </div>
-            </div>
 
             <!-- Question 2: Ready to Upload -->
             <div class="form-group">
