--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     <!-- Contributors will be added here dynamically -->
                 </div>
                 <button type="button" class="add-contributor-btn" id="addContributorBtn">
-                    + Add Contributor
+                    + Add Another Contributor
                 </button>
                 
                 <!-- NEW: Personal Message Box -->
