--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@
                         <strong>💡 Tip:</strong> It is recommended that you request memories from a special part of the life you are honoring (if helpful) AND provide a memory count guideline to help you remain within 250 images overall. For example: "We would love to add your favorite 10 photos of {Loved One Name}"
                     </small>
                 </div>
-
+            </div>
+            
             <!-- Question 2: Ready to Upload -->
             <div class="form-group">
                 <label>
